Listen for text channel invalidation, not just Closed

If the CM crashes, the Closed() signal will not be emitted for a
channel. This previously left the logger believing it was logging a
channel, when actually it wasn't.

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=30824>